<resources>
    <string name="app_name">My Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_search">Search</string>
    <string name="nav_title">My Restaurant</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_exit">Exit Restaurant</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Us</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_item_search">Item Search</string>
    <string name="soup">Soup</string>
    <string name="Image">Image</string>
    <string name="pasta">Pasta</string>
    <string name="pizza">Pizza</string>
    <string name="title_activity_delicacies">Delicacies</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="menu_item">Menu Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dummy">dummy</string>
    <string name="shows_meal_image">shows meal image</string>
    <string name="delicacy_name">Delicacy name</string>
    <string name="prawn_soup_fullPrice">N 350</string>
    <string name="prawn_soup">Prawn Soup</string>
    <string name="normal_soup">Normal Soup</string>
    <string name="prawn_soup_halfPrice">N 175</string>

    <string name="pennine_pasta">Pennine Romanoff</string>
    <string name="tomato_pasta">Tomato Sauce Pasta</string>
    <string name="pennine_pasta_price">N 800</string>
    <string name="pennine_half_price">N 400</string>
    <string name="tomato_pasta_price">N 1000</string>
    <string name="tomato_half_price">N 500</string>

    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="chicken_pizza">Chicken Pizza</string>
    <string name="pepperoni_pizza_price">N 1500</string>
    <string name="pepperoni_half_price">N 750</string>
    <string name="chicken_pizza_price">N 2000</string>
    <string name="chicken_half_price">N 1000</string>

</resources>
