<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_item_search"
            android:icon="@drawable/ic_search_grey_24dp"
            android:title="@string/menu_item_search" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/menu_sync" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_exit" />
    </group>
</menu>
