<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/soupFrag_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/soupFrag_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/normal_soup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/soup_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/soup"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/shows_meal_image" />

                <TextView
                    android:id="@+id/delicacy_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_soup"
                    android:layout_toEndOf="@id/soup_image"
                    android:textSize="22sp"
                    android:layout_marginStart="30dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/delicacy_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_soup"
                    android:layout_toEndOf="@id/soup_image"
                    android:layout_below="@id/delicacy_name"
                    android:textSize="18sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N 300.00"
                    android:layout_toEndOf="@id/soup_image"
                    android:layout_below="@id/delicacy_name1"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/prawn_soup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/soup_image1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/prawn_coconut_soup"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/shows_meal_image" />

                <TextView
                    android:id="@+id/delicacy_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prawn_soup"
                    android:layout_toEndOf="@id/soup_image1"
                    android:textSize="22sp"
                    android:layout_marginStart="30dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/delicacy_name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prawn_soup"
                    android:layout_toEndOf="@id/soup_image1"
                    android:layout_below="@id/delicacy_name2"
                    android:textSize="18sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/price1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N 350.00"
                    android:layout_toEndOf="@id/soup_image1"
                    android:layout_below="@id/delicacy_name3"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</ScrollView>